<resources>
    <string name="app_name">V Carry</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">ActivityHome</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_home">Home</string>
    <string name="nav_trips">Trips</string>
    <string name="nav_accountBalance">Account Balance</string>
    <string name="nav_tripOnOffer">Trip On Offer</string>
    <string name="nav_share">Share</string>
    <string name="nav_sendFeedback">Send Feedback</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCVa5aEoKbZQjYvhkvPav-XtGsL3F3E7zs
    </string>

    <string name="hindi">हिंदी</string>

    <string name="gujarati">ગુજરાતી</string>

    <string name="select_language">Select Language</string>

    <string name="actionbar_title_trips">Trips</string>

    <string name="ongoing_trip">Ongoing Trips</string>
    <string name="book_a_trip">Book a Trip</string>
    <string name="schedule_trip">Schedule a Trip</string>
    <string name="trip_summary">Trip Summary</string>

    <string name="from">From</string>
    <string name="to">To</string>
    <string name="vehicle">Vehicle</string>
    <string name="request_trip">Request Trip</string>

    <string name="select_start_location">Starting Location</string>
    <string name="select_destination">Select Destination</string>

    <string name="select_this_location">SELECT LOCATION</string>
    <string name="full_name">Full Name</string>
    <string name="contact_no">Contact No</string>
    <string name="address_one">Address Line 1</string>
    <string name="address_two">Address Line 2</string>
    <string name="prefix">Prefix</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="register">Register</string>
    <string name="trip_cost">Trip Cost</string>

    <string name="rs">\u20B9</string>
    <string name="map">Map</string>
    <string name="simple_alert_title">Alert!</string>
    <string name="search_location">Search location...</string>
    <string name="fetching_location">Fetching location...</string>
    <string name="book_trip">BOOK TRIP</string>
    <string name="book_trip_prompt_msg">Are you sure you want to book this trip?</string>
    <string name="booking_request_success_message">Your trip request was submitted successfully, Please wait for booking confirmation from V-Carry!</string>
    <string name="something_went_wrong">Something went wrong, Please try again later</string>
    <string name="check_internet">Please check internet connection</string>
    <string name="driver_name">Motorist Name</string>
    <string name="trip_confirmed">Trip Confirmed</string>
    <string name="driver_allocated">Motorist Allocated</string>
    <string name="pending_confirmation">Pending Confirmation</string>
    <string name="driver_location">Motorist Location</string>
    <string name="getting_driver_location">Getting Motorist Location...</string>
    <string name="currently_you_have_no_booked_trips">Currently you have no booked trips</string>
    <string name="trip_type">Trip Type</string>
    <string name="one_way">One Way</string>
    <string name="return_trip">Return</string>

    <string name="paid">Paid</string>
    <string name="unpaid">Payable</string>
    <string name="today">Today</string>
    <string name="this_month">This Month</string>
    <string name="total">Total</string>
    <string name="trip_completed">Trip Completed:</string>
    <string name="incomplete_trip">Incomplete:</string>
    <string name="day">DAY</string>
    <string name="month">MONTH</string>
    <string name="year">YEAR</string>
    <string name="time">TIME</string>
    <string name="trip_schedule">Trip Schedule</string>
    <string name="trips_today">Trips Today</string>
    <string name="trips_this_month">Trips This Month</string>
    <string name="total_trips">Total Trips</string>
    <string name="company_name">Company Name: </string>
    <string name="trip_finished">Trip Finished</string>
    <string name="cancelled_by_you">Cancelled By You</string>
    <string name="cancelled_by_motorist">Cancelled By Motorist</string>
    <string name="trip_started">Trip Started</string>
    <string name="no_trips_found">No Trips Found.</string>
    <string name="no_internet">No Internet</string>
    <string name="trip_number">Trip Number</string>
    <string name="trip_time">Trip Time</string>
    <string name="customer_name">Customer Name</string>
    <string name="request_from">From</string>
    <string name="request_to">To</string>
    <string name="trip_status">Trip Status</string>
    <string name="fare">Trip Fare</string>
    <string name="request_from_company_name">From Company Name</string>
    <string name="to_compant_name">To Company Name</string>
    <string name="driver_licence_no">Motorist Licence No</string>
    <string name="vehicel_no">Vehicle No</string>
    <string name="weight">Weight</string>
    <string name="dimension">Dimension</string>
    <string name="trip_not_confirmed">This trip is not Confirmed</string>
    <string name="active_trips">Active Trips</string>
    <string name="canceled_by_vcarry">Canceled By V-Carry</string>
    <string name="rate_motorist">Rate Motorist</string>
    <string name="submit">Submit</string>
    <string name="item">ITEM</string>
    <string name="your_share">YOUR SHARE</string>
    <string name="trip_charges_details">Trip Charges Details</string>
    <string name="fare_details_not_found">Invoice not yet generated, Try again later.</string>
    <string name="cannot_track_multi_trip_drivers">This Motorist is not eligible for GPS Tracking</string>
    <string name="feature_coming_soon">Feature Coming Soon</string>
    <string name="pending_trips">Pending Trips</string>
    <string name="finished_trips">Finished Trips</string>
    <string name="canceled_by_you">Canceled By You</string>
    <string name="amount">AMOUNT</string>
    <string name="discount">DISCOUNT</string>
    <string name="net_amount">NET AMOUNT</string>
    <string name="fare_details">Trip Invoice</string>
    <string name="registered_customer">You are a registered Customer.</string>
    <string name="no_active_trips_found">No Active Trips</string>
    <string name="from_to_cannot_be_same">From and To Location cannot be same</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="cannot_get_location">Cannot Get Location</string>
    <string name="motorist_no_app">This Motorist is not having App.</string>
    <string name="not_eligible_for_tracking">Motorist not eligible for GPS Tracking.</string>
    <string name="note">Note</string>
    <string name="code_not_sent">Code not yet sent. Please wait for OTP.</string>
    <string name="please_wait">Please Wait...</string>
    <string name="verifying_otp">Verifying OTP...</string>
    <string name="verify_phone">Verifying Phone Number...</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_wait_you_will_receive_a_otp">Please wait, You will receive a OTP in 60 Seconds.</string>
    <string name="resend">Resend</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="enter_mobile_no">Mobile Number</string>

    <string name="nav_signOut">Sign Out</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="select_weight">Select Weight</string>
    <string name="select_city">Select City</string>
    <string name="select_city_area"><![CDATA[Select City & Area]]></string>


</resources>
