<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.fusionbit.vcarrycustomer.ActivityRegistrationForm">


    <FrameLayout
        android:id="@+id/fl_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"/>

    </FrameLayout>

    <Button
        android:id="@+id/btn_registerNewCustomer"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="0dp"
        android:layout_marginTop="10dp"
        android:padding="0dp"
        android:text="@string/register"
        android:visibility="visible"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fl_register"
        android:clipToPadding="false"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prefix"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spin_prefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:maxLength="32"/>

            </android.support.design.widget.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/city"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spin_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/area"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spin_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_addressLineOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_one"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_addressLineTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address_two"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_contact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_no"
                    android:inputType="number"
                    android:maxLength="10"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
