<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.fusionbit.vcarrycustomer.ActivityTripDetails">

    <RelativeLayout
        android:id="@+id/activity_trip_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/trip_status"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text="Trip Finished"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/trip_number"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text="326472634237"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/trip_time"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripDetailTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text="5:30 PM"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_tripStartedDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/driver_name"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/tv_driverName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="#333333"
                            android:textSize="15sp"
                            tools:text="Rutvik Mehta"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/driver_licence_no"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/tv_tripDriverLicenceNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="#333333"
                            android:textSize="15sp"
                            tools:text="68767867868"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:text="@string/vehicel_no"
                            android:textSize="15sp"/>

                        <TextView
                            android:id="@+id/tv_vehicleNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:textColor="#333333"
                            android:textSize="15sp"
                            tools:text="GJ1 FA 5322"/>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/request_from_company_name"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripFromCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text=" hotel, satellite 380015"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/request_from"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:lineSpacingExtra="4dp"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text="52,53 Jodhpur park soc near ramdev nagar opp courtyad marriott hotel, satellite 380015"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/to_compant_name"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripToCompanyName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text=" hotel, satellite 380015"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/request_to"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripDestination"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:lineSpacingExtra="4dp"
                        android:textColor="#333333"
                        android:textSize="15sp"
                        tools:text=" hotel, satellite 380015"/>

                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#999999"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/fare"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/tv_tripFare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/rs"
                        android:textColor="#333333"
                        android:textSize="26sp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
